--- a/styles/style.css
+++ b/styles/style.css
@@ -24,10 +24,10 @@ a:hover {
 }
 
 a {
-  color: rgb(63, 244, 247);
+  color: gray;
   width: 500px;
-  border: 1px solid black;
-  text-shadow: 3px 3px 1px black;
+  padding: 20px 0;
+  text-shadow: 2px 1px 1px rgb(63, 244, 247);
 }
 
 img[alt] {
